# robot_arm_ros2_moveit2

./: .gitignore  README.md
move_robot_description/: CMakeLists.txt  package.xml
move_robot_description/launch/: display.launch.xml
move_robot_description/urdf/: common_properties.urdf.xacro  mobile_robot.urdf.xacro  mobile_robot_gazebo.urdf.xacro  my_robot.urdf.xacro
my_robot_bringup/: package.xml
my_robot_bringup/config/: my_robot_controllers.yaml  number_publisher.yaml  slam_toolbox.yaml
my_robot_bringup/launch/: action_servers.xml  arm_executer.launch.xml  my_final_project.xml  my_robot.launch.xml  my_simulation.launch.xml  number_app.launch.py  number_app.launch.xml  robot_news_app.launch.xml  turtle_action_server.xml  turtle_killer_app.launch.xml  turtlebot_nav2bringup.xml
my_robot_commander_cpp/: CMakeLists.txt  package.xml
my_robot_commander_cpp/src/: commander_tamplate.cpp  test_moveit.cpp
my_robot_movit_config/: .setup_assistant  package.xml
my_robot_movit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_robot_arm.ros2_control.xacro  my_robot_arm.srdf  my_robot_arm.urdf.xacro  ros2_controllers.yaml
my_robot_movit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  (+4 more)
robot_description/: CMakeLists.txt  package.xml
the_robot_msgs/: CMakeLists.txt  package.xml
the_robot_msgs/action/: MoveRobot.action  RobotMove.action
the_robot_msgs/msg/: ArmPoseTargets.msg  HardwareStatus.msg  LedStateM.msg  LiveTurtuiles.msg
the_robot_msgs/srv/: LedState.srv
(+14 files in other folders)
